--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.3.4",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
